--- a/backend/package.json
+++ b/backend/package.json
@@ -2,17 +2,14 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "password.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./server.js",
-    "dev": "nodemon ./server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "naveen",
+  "author": "Naveen",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "mongoose": "^6.6.1",
-    "nodemon": "^2.0.20"
+    "mongoose": "^6.6.1"
   }
 }
